--- a/discloud.config
+++ b/discloud.config
@@ -1,11 +1,9 @@
-NAME=Backend
-AVATAR=https://i.imgur.com/bWhx7OT.png
-TYPE=site
-ID=zeusking
 MAIN=index.js
+NAME=Bashend
+AVATAR=https://imgur.com/a/vwlpQCU
 RAM=512
 AUTORESTART=false
-VERSION=latest
 APT=tools
+VERSION=latest
 START=
 BUILD=
